CRB-1931 Azure UAE Central introduced behind an entitlement CDP_AZURE_IMAGE_MARKETPLACE, CDP_AZURE_UAE_CENTRAL are requireed to use that region